fixes, various z-index issues, cleans-up iOS Mobile UI, fixes iOS can't click images bug

--- a/app/assets/stylesheets/blacklight.css.scss
+++ b/app/assets/stylesheets/blacklight.css.scss
@@ -10,10 +10,6 @@
 
 $grid-float-breakpoint: 992px;
 
-#sortAndPerPage .btn-group {
-  z-index: 0;
-}
-
 #primary-nav {
   margin-top: 25px;
 }
